--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello, my name is Marina
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Insciption</h1>
+    <p>Hello, my name is Marina</p>
+</body>
+</html>
+
